@@ -1,3 +1,7 @@
+2009-11-17  Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
+	* configure.ac, test/TestProviders/cmpiTestInstanceProvider.c
+	[ 2859978 ] TestProviders for SFCB (added threading based functions support)
+
 2009-11-09  Chris Buccella  <buccella@linux.vnet.ibm.com>
 
 	* fileRepository.c:
